--- a/miner-web/pom.xml
+++ b/miner-web/pom.xml
@@ -2,11 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.seimos.miner</groupId>
-  <artifactId>web</artifactId>
+  <artifactId>miner-web</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>web Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+  <name>Miner Web</name>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -14,8 +13,39 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.hibernate.javax.persistence</groupId>
+    	<artifactId>hibernate-jpa-2.0-api</artifactId>
+    	<version>1.0.1.Final</version>
+    </dependency>
+    <dependency>
+    	<groupId>c3p0</groupId>
+    	<artifactId>c3p0</artifactId>
+    	<version>0.9.1.2</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.mongodb</groupId>
+    	<artifactId>mongo-java-driver</artifactId>
+    	<version>2.7.2</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework.security</groupId>
+    	<artifactId>spring-security-web</artifactId>
+    	<version>3.1.0.RELEASE</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.codehaus.jackson</groupId>
+    	<artifactId>jackson-mapper-asl</artifactId>
+    	<version>1.9.6</version>
+    </dependency>
+    <dependency>
+    	<groupId>seimos</groupId>
+    	<artifactId>seimos</artifactId>
+    	<version>1.3.1</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>web</finalName>
   </build>
+  <url>seimos.com.br/miner</url>
 </project>
