--- a/miner-android/AndroidManifest.xml
+++ b/miner-android/AndroidManifest.xml
@@ -4,7 +4,9 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8"/>
+    <uses-sdk
+        android:minSdkVersion="3"
+        android:targetSdkVersion="15" />
     
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.UPDATE_DEVICE_STATS"/>  
@@ -24,6 +26,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <!-- Start of Crittercism.com Code -->
+		<activity 
+		    android:name="com.crittercism.NotificationActivity">
+		</activity>        
+		<!-- End of Crittercism.com Code -->
+        
     </application>
 
 </manifest>
